main.tf
data "aws_ami" "app_ami" {
  most_recent = true

  filter {
    name   = "name"
    values = ["bitnami-tomcat-*-x86_64-hvm-ebs-nami"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["979382823631"] # Bitnami
}

data "aws_vpc" "default" {
  default = true
}

resource "aws_instance" "blob" {
  ami           = data.aws_ami.app_ami.id
  instance_type = var.instance_type   ##t 2.micro  ##"t3.nano" t3.micro"

  vpc_security_group_ids = [aws_security_group.blob.id]

  tags = {
    Name = "HelloWorld"
  }
}

resource "aws_secuirty_group" "blob" {
  name = "blob"
  description = "Allow http and https in. Allow everthing out"

  vpc_id = data.aws_vpc.defaukt.id
}

resource "aws_security_group_rule" "blob_http_in" {
  type        = "ingress"
  from_port   = 80
  to_port     = 80
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]

  security_grooup_id = aws_security_group.blob.id
}

resource "aws_security_group_rule" "blob_https_in" {
  type        = "ingress"
  from_port   = 443
  to_port     = 443
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]

  security_grooup_id = aws_security_group.blob.id
}

resource "aws_security_group_rule" "blob_everything_out" {
  type        = "egress"
  from_port   = 0
  to_port     = 0
  protocol    = "-1"
  cidr_blocks = ["0.0.0.0/0"]

  security_grooup_id = aws_security_group.blob.id
}
